@@ -1,4 +1,5 @@
 5.0.0 -> 5.1a1:
+    - rse: add new C API function rpmuuidMake() for generating UUIDs of version 1, 3, 4 or 5
     - rse: provide both ORIGINTIME (based on INSTALLTIME) and ORIGINTID (based on INSTALLTID)
     - jbj: pedantic identification of Foo (not foo) syscalls in --fsmdebug spew.
     - jbj: fix: --rollback PSM_INIT changes added fstates before initialize.
